# dxclrecorder

./: .gitignore  Cargo.toml  README.md  dxclrecorder.json
src/: configuration.rs  filerotate.rs  main.rs
