[package]
name = "dxclrecorder"
version = "0.1.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxclrecorder.git"
description = "A recorder for spots published by DX cluster servers"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
dxcllistener = { path = "/media/max/hdd/Bibliothek/dev/Cluster/libdxcllistener_rs/" }
dxclparser = "1.0.1"
hambands = "0.1.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
simplelog = "0.12.0"
time = "0.3.17"
tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
thiserror = "1.0.37"
