[package]
name = "dxclrecorder"
version = "0.2.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxclrecorder.git"
description = "A recorder for spots published by DX cluster servers"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
dxcllistener = "1.0.1"
dxclparser = "1.0.1"
hambands = "1.0.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
log = "0.4.17"
simplelog = "0.12.0"
time = "0.3.17"
tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
chrono = "=0.4.22"
clap = { version = "4.0.29", features = ["derive"] }
thiserror = "1.0.37"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
