[package]
name = "dxclrecorder"
version = "0.2.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxclrecorder.git"
description = "A recorder for spots published by DX cluster servers"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
dxcllistener = "1.0.3"
dxclparser = "1.0.1"
hambands = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
simplelog = "0.12.1"
time = "0.3.29"
tokio = { version = "1.33.0", features = ["signal", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
thiserror = "1.0.49"
async-compression = { version = "0.4.3", features = ["tokio", "gzip"] }
